# cargo-clean-all

./: .gitignore  Cargo.toml  LICENSE  README.md  com.user.cargo-clean-all.plist.template  config.example.toml  install.sh
.github/workflows/: ci.yml
src/: cleaner.rs  config.rs  logger.rs  main.rs  notify.rs  scanner.rs
